# financial-regulation-agent

./: .env.example  .flake8  .gitignore  .pylintrc  IMPROVEMENTS.md  Makefile  README.md  check_db.py  clean_chroma.py  count_db.py  diagnose_chroma.py  evaluate_single.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.sh  run_benchmark.py  run_webapp.sh  test.py  test_basel_selenium.py
.github/workflows/: ci.yml
app/: bootstrap.py  config.py  dependencies.py  llm_config.py  main.py
docker/: docker-compose.yml
docs/: architecture.md
evaluation/: answer_eval.py  benchmark_questions.json  evaluator.py  hallucination_detector.py  metrics.py  retrieval_eval.py
evaluation/prompts/: answer_eval.txt  hallucination_detector.txt
financial-regulation-agent/: .env.example  .gitignore  Makefile  README.md  requirements.txt  run_agent.py  run_all.sh
financial-regulation-agent/app/: config.py  dependencies.py
financial-regulation-agent/docker/: Dockerfile  docker-compose.yml
financial-regulation-agent/evaluation/: hallucination_detector.py  metrics.py
financial-regulation-agent/retrieval/: vector_store.py
financial-regulation-agent/tools/: fed_balance_sheet.py  market_data.py  registry.py
graph/: builder.py  constants.py  state.py
graph/nodes/: calculation.py  classify_intent.py  crag.py  direct_response.py  extract_filters.py  merge.py  rag.py  reasoning.py  router.py  structured.py  validation.py
graph/prompts/: classify_intent.txt  crag_decompose.txt  crag_evaluator.txt  extract_filters.txt  loader.py  merge.txt  plan.txt  structured.txt  validate.txt
ingestion/: ingest_scraped_docs.py
ingestion/regcrawler/regcrawler/: items.py  (+2 more)
observability/: logger.py  metrics.py  monitor.py  tracer.py
retrieval/: chunking.py  embeddings.py  hybrid_search.py  vector_store.py
scripts/: check_cftc.py  check_db.py  clean_chroma.py  count_db.py  diagnose_chroma.py  evaluate_single.py  generate_langgraph_png.py  run_agent.py  run_benchmark.py  run_ci_checks.sh
tests/: test_agent.py  test_evaluation.py  test_graph.py  test_retrieval.py  test_tools.py
tools/: bank_capital.py  base.py  fed_balance_sheet.py  market_data.py  registry.py  treasury.py
webapp/: server.py
webapp/retrieval/: query_controller.py
webapp/static/: index.html
(+41 files in other folders)
