[project]
name = "financial-regulation-agent"
version = "1.0.0"
description = "Production RAG + Agent system for FOMC, SEC, Basel, CFTC & EDGAR"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app", "graph", "observability", "retrieval", "evaluation", "ingestion", "tools"]
skip = [".git", ".venv", "data", "build", "dist"]
skip_gitignore = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: marks tests requiring external services (Chroma, embeddings)"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
    "D",           # docstrings (D100, D101, D102, etc.)
    "BLE001",      # blind except
    "E722",        # bare except
    "E501",        # line too long
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "bare-except",
    "broad-except",
    "line-too-long",
]
